Fixes MJ-768 Truncate URLs to prevent breaking layout.

--- a/static/my.jobs.css
+++ b/static/my.jobs.css
@@ -3095,3 +3095,14 @@ body.modal-open {
     width: 100%;
     margin-bottom: 20px;
 }
+
+.truncate { 
+    overflow:hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+    display:block;
+}
+
+.table-fixed {
+    table-layout: fixed;
+}
